# Path-Stencil

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mesh_test2.xml  path-stencil.pro  path.pro  pathtracer.cpp  pathtracer.h  submission-final.md  submission-milestone.md
BVH/: BBox.cpp  BBox.h  BBox_appleChip.cpp  BVH.cpp  IntersectionInfo.h  Object.h  Ray.h  Sphere.h  vector3.h
example-scenes/: ColoredBox.xml  CornellBox-Glossy.xml  CornellBox-Mirror.xml  CornellBox-Sphere.xml  CornellBox.xml  MedievalBoat.xml
example-scenes/models/ColoredCube/: ColoredCube.mtl
example-scenes/models/CornellBox/: CornellBox-Glossy.mtl
example-scenes/models/MedievalBoat/: MedievalBoat.mtl  notes.txt
scene/: basiccamera.cpp  basiccamera.h  camera.h  primitive.h  ray.cpp  ray.h  scene.cpp  scene.h
scene/shape/: Sphere.h  mesh.cpp  mesh.h  triangle.cpp  triangle.h
student_outputs/final/: README.md
template_inis/final/: cornell_box_direct_lighting_only.ini  cornell_box_full_lighting.ini  cornell_box_full_lighting_low_probability.ini  glossy.ini  mirror.ini  refraction.ini
template_inis/milestone/: cornell_box_milestone.ini  sphere_milestone.ini
util/: CS123Common.h  CS123SceneData.h  Common.h  ISceneParser.h  SceneData.h  XmlSceneParser.cpp  XmlSceneParser.h
